--- a/src/pages/Admin/Overview/Panel/index.scss
+++ b/src/pages/Admin/Overview/Panel/index.scss
@@ -22,6 +22,11 @@
       color: $N200;
     }
   }
+  :global{
+    .pi-table-thead, .pi-pagination{
+      display: none;
+    }
+  }
 }
 /*.normal{
    position: relative;
@@ -51,7 +56,7 @@
   box-sizing: border-box;
   margin: 0 24px 24px 0;
   padding: 0 30px;
-  height: 416px;
+  height: 412px;
   overflow: hidden;
   border-radius: 3px;
   background-color: #fff;
