--- a/src/scss/partial/_icon.scss
+++ b/src/scss/partial/_icon.scss
@@ -1,8 +1,10 @@
 $icon-prefix: qicon;
-$icon-size-config: 'mini' 16px, 'small' 24px, 'medium' 32px, 'large' 48px, 'ex-large' 64px, 'huge' 120px;
+$icon-size-config: 'mini' 16px, 'small' 24px, 'medium' 32px, 'large' 64px, 'ex-large' 64px;
 
 $icon-button-border-radius: 3px;
 // todo
 $icon-button-active-background-color: #fff - 1;
 $icon-button-hover-background-color: #aaa - 1;
 $icon-button-disabled-opacity: .5;
+
+
