--- a/src/pages/Admin/Repos/Add/index.scss
+++ b/src/pages/Admin/Repos/Add/index.scss
@@ -2,7 +2,7 @@
 
 form.createForm {
   display: block;
-  padding: 36px 0 0 36px;
+  //padding: 36px 0 0 36px;
 
   &>div{
     margin-bottom: 24px;
