scroll header smoothly, fix App.jsx. delay render header and footer - fix page issues

--- a/src/components/Base/Icon/index.scss
+++ b/src/components/Base/Icon/index.scss
@@ -2,15 +2,17 @@
 
 :global {
   .#{$icon-prefix}-light {
-    --primary-color: #{$P100};  // origin #fff
+    --primary-color: #{$P100};
     --secondary-color: #{$P30};
     //--primary-opacity: 0.9;
     //--secondary-opacity: 0.4;
   }
 
   .#{$icon-prefix}-dark {
-    --primary-color: #{$N500}; // origin #324558
+    --primary-color: #{$N500};
     --secondary-color: #{$N65};
+    //--primary-opacity: 0.9;
+    //--secondary-opacity: 0.4;
   }
 
   .#{$icon-prefix}-coloured {
