--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -3,16 +3,15 @@
 $profile-hover-color: #efe6f8;
 
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   height: $header-height;
-  background-image: linear-gradient(to left, $P75, #854fb9 32%, #484999);
-  z-index: 999;
+  background: none;
+
   .wrapper {
     width: $content-width;
     margin: 0 auto;
-    height: 48px;
   }
 
   .logo {
@@ -58,50 +57,13 @@ $profile-hover-color: #efe6f8;
     }
   }
 
-  .menus {
-    float: right;
-    line-height: $header-height;
-    a {
-      padding: 0 10px;
-      border-radius: 12px;
-      color: #fff;
-      font-weight: 400;
-      font-style: normal;
-      line-height: 16px;
-      transition: all .3s ease-in-out;
-      &:hover {
-        background-color: rgba(#fff, 0.1);
-      }
-    }
-
-    .profiles {
-      min-width: 120px;
-      margin-left: -70px;
-      .profileItem {
-        line-height: 32px;
-        height: 32px;
-        padding: 0;
-        a{
-          display: inline-block;
-          padding: 0 12px;
-          width: 100%;
-          line-height: 32px;
-          font-size: $font14;
-          color: $N300;
-          border-radius: 0;
-          letter-spacing: 0;
-          &:hover {
-            background: $P10;
-            color: $N500;
-          }
-        }
-      }
-    }
-  }
 }
 
-.lightHeader {
-  background-image: none !important;
+.stickyHeader {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
 
   .menus, .locale {
     .translation {
@@ -114,17 +76,60 @@ $profile-hover-color: #efe6f8;
       }
     }
   }
+}
 
-  .toggleBtn {
-    line-height: 20px;
-    color: $third-text-color;
-    border-color: $border-dark
+.menus {
+  float: right;
+  line-height: $header-height;
+  a {
+    padding: 5px 10px;
+    border-radius: 12px;
+    color: $N500;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 16px;
+    transition: all .3s ease-in-out;
+    &:hover {
+      background-color: rgba($N500, 0.1);
+    }
+
+    .stickyHeader & {
+      color: $N0;
+    }
   }
 
+  .profiles {
+    min-width: 120px;
+    margin-left: -70px;
+    .profileItem {
+      line-height: 32px;
+      height: 32px;
+      padding: 0;
+      a{
+        display: inline-block;
+        padding: 0 12px;
+        width: 100%;
+        line-height: 32px;
+        font-size: $font14;
+        color: $N300;
+        border-radius: 0;
+        letter-spacing: 0;
+        &:hover {
+          background: $P10;
+          color: $N500;
+        }
+      }
+    }
+  }
 }
 
 .toggleBtn {
-  color: #fff;
+  color: $N500;
   opacity: .9;
   cursor: pointer;
+  line-height: 20px;
+
+  .stickyHeader & {
+    color: $N0;
+  }
 }
