--- a/src/pages/Admin/Runtimes/Add/index.scss
+++ b/src/pages/Admin/Runtimes/Add/index.scss
@@ -117,8 +117,8 @@ form.createForm {
   }
   .credentialTip {
     font-size:12px;
-    color: #626466;
-    margin-left: 151px;
+    color: $N100;
+    margin-left: 192px;
   }
 }
 
