--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -16,6 +16,13 @@
      margin: 0;
    }
    .title{
+     .icon{
+       display: inline-block;
+       width: 48px;
+       height: 48px;
+       margin-bottom: 12px;
+       border-radius: 2px;
+     }
      :global {
        .icon {
          //float: left;
@@ -61,6 +68,11 @@
   text-align: left;
   position: relative;
   .title{
+    .icon {
+      float: left;
+      width: 36px;
+      height: 36px;
+    }
     :global{
       .icon {
         float: left;
