--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -115,7 +115,8 @@
   }
 }
 .filterOuter{
-  width: 95px;
+  min-width: 95px;
+  max-width: 120px;
   [class*='target']{
     height: auto;
     width: auto;
