--- a/src/pages/Admin/Repos/Add/index.scss
+++ b/src/pages/Admin/Repos/Add/index.scss
@@ -80,7 +80,7 @@ form.createForm {
     background-color: $N0;
     border: 1px solid $N30;
     outline: none;
-    resize: none;
+    //resize: none;
     &:focus{
       box-shadow: 0 1px 2px 0 rgba(109, 53, 195, 0.15);
       border: solid 1px $P75;
