--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -38,7 +38,7 @@ $profile-hover-color: #efe6f8;
       border-radius: 16px;
       border-color: transparent;
       background-color: rgba(#ffffff, 0.1);
-      transition: color .3s ease-in;
+      transition: color 1s ease-in;
       &:focus{
         width: 360px;
         font-weight: normal;
@@ -101,23 +101,19 @@ $profile-hover-color: #efe6f8;
   .profiles {
     min-width: 120px;
     margin-left: -70px;
-    .profileItem {
-      line-height: 32px;
+    a{
+      display: block;
       height: 32px;
-      padding: 0;
-      a{
-        display: inline-block;
-        padding: 0 12px;
-        width: 100%;
-        line-height: 32px;
-        font-size: $font14;
-        color: $N300;
-        border-radius: 0;
-        letter-spacing: 0;
-        &:hover {
-          background: $P10;
-          color: $N500;
-        }
+      padding: 0 12px;
+      width: 100%;
+      line-height: 32px;
+      font-size: $font14;
+      color: $N300;
+      border-radius: 0;
+      letter-spacing: 0;
+      &:hover {
+        background-color: $N10;
+        color: $N500;
       }
     }
   }
