--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -80,7 +80,7 @@ $grey-light: #d6cfde;
 $sub-nav-color: #160029;
 $id-color: #127db3;
 $link-color: #6c2db5;
-$title-color: #300E56;
+$title-color: $N500;
 $text-color: #333333;
 $second-text-color: #666666;
 $third-text-color: #7749ac;
