fix table filter style

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -128,7 +128,8 @@
   }
   :global{
     .icon{
-      //float: right;
+      position: relative;
+      top: 3px;
       margin-left: 8px;
     }
   }
