--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -115,7 +115,7 @@
   }
 }
 .filterOuter{
-  min-width: 95px;
+  min-width: 90px;
   max-width: 120px;
   [class*='target']{
     height: auto;
@@ -128,7 +128,8 @@
   }
   :global{
     .icon{
-      //float: right;
+      position: relative;
+      top: 3px;
       margin-left: 8px;
     }
   }
