--- a/src/pages/Admin/Apps/Deploy/Cell/index.scss
+++ b/src/pages/Admin/Apps/Deploy/Cell/index.scss
@@ -14,13 +14,19 @@
     text-align: right;
     word-wrap: break-word;
     word-break: break-word;
+    @include textCut;
   }
   .inputName{
     line-height: 32px;
   }
+  .radioName{
+    margin-top: 8px;
+  }
   .showWord{
-    display: inline;
-    width: auto;
+    float: left;
+    display: inline-block;
+    max-width: 420px;
+    line-height: 32px;
   }
   .rightShow{
     margin-top: 8px;
