--- a/src/pages/Admin/Runtimes/Add/index.scss
+++ b/src/pages/Admin/Runtimes/Add/index.scss
@@ -87,7 +87,7 @@ form.createForm {
     background-color: $N0;
     border: 1px solid $N30;
     outline: none;
-    resize: none;
+    //resize: none;
     &:focus{
       box-shadow: 0 1px 2px 0 rgba(109, 53, 195, 0.15);
       border: solid 1px $P75;
@@ -117,8 +117,8 @@ form.createForm {
   }
   .credentialTip {
     font-size:12px;
-    color: #626466;
-    margin-left: 151px;
+    color: $N100;
+    margin-left: 192px;
   }
 }
 
