--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,8 +1,5 @@
 @import "~scss/vars";
 
-$line-height: $footer-height - 1;
-$fg-color: #78839e;
-
 .footer {
   position: static;
   width: 100%;
@@ -13,13 +10,13 @@ $fg-color: #78839e;
   .wrapper {
     width: $content-width;
     margin: 0 auto;
-    color: $fg-color;
+    color: $N100;
 
     .logo {
       display: inline-block;
       float: left;
       font-size: $size-medium;
-      line-height: $line-height;
+      line-height: $footer-height;
       text-transform: uppercase;
       :global {
         img {
@@ -30,19 +27,14 @@ $fg-color: #78839e;
     .terms {
       display:inline-block;
       float: right;
-      line-height: $line-height;
+      line-height: $footer-height;
       & > li{
         list-style-type: none;
         float: left;
         text-align: right;
-        margin-left: 10px;
-
-        &.copyright {
-          margin-left: 20px;
-        }
-
+        margin-left: 20px;
         a {
-          color: $fg-color;
+          color: $N100;
           &:hover {
             color: $P75;
           }
@@ -55,9 +47,10 @@ $fg-color: #78839e;
     display:inline-block;
     height: 3px;
     width: 3px;
-    background-color: $fg-color;
+    background-color: $N100;
     border-radius: 50%;
     vertical-align: middle;
+    margin: 0 5px;
   }
 
   .toggleLocale {
