fix logo styles

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -15,7 +15,7 @@ $profile-hover-color: #efe6f8;
   }
 
   .logo {
-    width: $logo-width;
+    width: auto;
     height: $logo-height;
     display: inline-block;
     margin-top: $header-height / 2;
