--- a/src/pages/AppDetail/Meta/index.scss
+++ b/src/pages/AppDetail/Meta/index.scss
@@ -19,7 +19,8 @@
   .desc {
     font-size: 14px;
     line-height: 1.71;
-    color: $N300
+    color: $N300;
+    margin-left: 60px;
   }
   //.carousel {
   //  float: right;
