--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,7 +1,7 @@
 @import '~scss/vars';
 
 .contentOuter {
-  background-color: $body-bg;
+  //background-color: $body-bg;
 }
 .content {
   position: relative;
