--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -33,20 +33,26 @@ $profile-hover-color: #efe6f8;
     vertical-align: top;
 
     input {
-      //width: 240px;
-      color: rgba(#ffffff, 0.7);
+      width: 240px;
+      color: $P45;
       font-weight: 400;
       font-size: $size-normal;
       border-radius: 16px;
-      border: transparent;
-      background-color: rgba(#ffffff, 0.1);
-      transition: color 1s ease-in;
+      border: solid 1px rgba($N0, 0.1);
+      background-color: rgba($N0, 0.1);
+      transition: color .5s ease-in;
+
       &:focus{
-        transition: color .5s ease-in;
+        transition: width .3s ease-in;
         width: 360px;
         font-weight: normal;
         color: $N0;
-        border: solid 1px rgba(#ffffff, 0.5);
+        border: solid 1px rgba($N0, 0.5);
+      }
+
+      &:hover {
+        color: $N0;
+        border: solid 1px rgba($N0, 0.3);
       }
     }
   }
