--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -99,6 +99,10 @@ $profile-hover-color: #efe6f8;
   .profiles {
     min-width: 120px;
     margin-left: -70px;
+    border-radius: 2px;
+    background-color: $N0;
+    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.1), 0 4px 8px 0 rgba(35, 35, 36, 0.08);
+    border: solid 1px $N30;
     a{
       display: block;
       height: 32px;
@@ -106,6 +110,7 @@ $profile-hover-color: #efe6f8;
       width: 100%;
       line-height: 32px;
       font-size: $font14;
+      font-weight: normal;
       color: $N300;
       border-radius: 0;
       letter-spacing: 0;
