--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -3,9 +3,9 @@
 $login-bg: linear-gradient(to left, #794db3, #854fb9 32%, #484999);
 $login-form-bg: #ffffff;
 $login-form-shadow: 0 4px 35px 0 rgba(48, 14, 86, 0.3);
-$login-submit-bg: linear-gradient(to left, #f0ab0d, #e68b22);
-$login-submit-hover-bg: linear-gradient(to left, #f0ab0d, #e68b22);
-$login-submit-active-bg: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), linear-gradient(to left, #f0ab0d, #e68b22);
+$login-submit-bg: linear-gradient(to left, #f1ac0e, #e68c22);
+$login-submit-hover-bg: linear-gradient(to left, #f0b40e, #e69122);
+$login-submit-active-bg: linear-gradient(to left, #f0b40e, #e69122);
 $login-placeholder: #c9bed6;
 
 $input-item-width: 320px;
@@ -17,10 +17,16 @@ $input-item-height: 48px;
   background-image: $login-bg;
 }
 
+.loginContent{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .loginTitle {
   display: block;
   text-align: center;
-  padding-top: 249.6px;
+ // padding-top: 249.6px;
 }
 
 .loginForm {
@@ -72,7 +78,7 @@ $input-item-height: 48px;
       width: $input-item-width;
       height: $input-item-height;
       padding: 15px 15px 15px 56px;
-      border: 1px solid $border-lighter;
+      border: 1px solid $N30;
       border-radius: 24px;
       box-shadow: none;
       font-size: $size-medium;
@@ -80,24 +86,22 @@ $input-item-height: 48px;
       color: $title-color;
       transition: all .3s ease-in-out;
       &::placeholder {
-        color: $login-placeholder;
+        color: $N45;
         opacity: 1;
         font-weight: normal;
         font-size: $size-medium;
       }
     }
     &:hover {
-      i {
-        color: $title-color;
-      }
       input {
         box-shadow: 0 2px 2px 0 rgba(48,14,86,0.06), 0 4px 8px 0 rgba(48,14,86,0.10);
-        border: 1px solid $border-dark;
+        border: 1px solid $P75;
+        color: $N500;
       }
     }
   }
   .checkbox {
-    color: $login-placeholder;
+    color: $N500;
   }
 }
 
