--- a/src/components/Base/Icon/index.scss
+++ b/src/components/Base/Icon/index.scss
@@ -18,8 +18,8 @@
   .#{$icon-prefix}-coloured {
     --primary-color: #{$P100};
     --secondary-color: #{$P30};
-    --primary-opacity: 0.9;
-    --secondary-opacity: 0.4;
+    //--primary-opacity: 0.9;
+    //--secondary-opacity: 0.4;
   }
 
   .icon {
