--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -33,6 +33,7 @@ $profile-hover-color: #efe6f8;
     vertical-align: top;
 
     input {
+      box-sizing: border-box;
       width: 240px;
       color: $P45;
       font-weight: 400;
@@ -42,14 +43,13 @@ $profile-hover-color: #efe6f8;
       background-color: rgba($N0, 0.1);
       transition: color .5s ease-in;
 
-      &:focus{
-        transition: width .3s ease-in;
+      &:focus {
+        transition: width .2s ease-in;
         width: 360px;
         font-weight: normal;
         color: $N0;
-        border: solid 1px rgba($N0, 0.5);
+        border: solid 1px rgba($N0, 0.5) !important;
       }
-
       &:hover {
         color: $N0;
         border: solid 1px rgba($N0, 0.3);
