--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,7 +13,7 @@
   body {
     font-family: $family-primary;
     font-size: $body-size;
-    color: $text-color;
+    color: #576075;
     background-color: $body-background-color;
     -webkit-font-smoothing: antialiased;
   }
