--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -90,7 +90,7 @@ $grey-time: #9b9b9b;
 $purple-name: #9d80bf;
 $purple-word: #1c062f;
 
-$background-color: #f6f6f8;
+$background-color: #F9FAFB;
 $background-color-lighter: #ffffff;
 $th-background-color: #efe9f7;
 $li-bg:#f5f7fa;
