--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -6,10 +6,10 @@
 
 .icon {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   width: 12px;
   height: 12px;
-  margin: 2px 4px 0 0;
+  margin: 0 4px 2px 0;
   border-radius: 50%;
   font-style: normal;
 
