--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -39,7 +39,7 @@ $profile-hover-color: #efe6f8;
       font-weight: 400;
       font-size: $size-normal;
       border-radius: 16px;
-      border: solid 1px rgba($N0, 0.1);
+      border: 1px solid transparent;
       background-color: rgba($N0, 0.1);
       transition: color .5s ease-in;
 
@@ -53,6 +53,23 @@ $profile-hover-color: #efe6f8;
       &:hover {
         color: $N0;
         border: solid 1px rgba($N0, 0.3);
+      }
+    }
+
+    :global {
+      .qicon {
+        --primary-color: #fff;
+        //--secondary-color: #d3c4ed;
+      }
+      .icon {
+        color: $N0;
+        opacity: 0.5;
+        &:hover, &:focus {
+          opacity: 1;
+          svg {
+            --primary-color: #fff;
+          }
+        }
       }
     }
   }
