--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -73,37 +73,52 @@ $input-item-height: 48px;
         opacity: .5;
         left: 24px;
       }
+
+      input {
+        width: $input-item-width;
+        height: $input-item-height;
+        padding: 15px 15px 15px 52px;
+        border: 1px solid $N30;
+        border-radius: 24px;
+        box-shadow: none;
+        font-size: $size-medium;
+        opacity: 1;
+        color: $N500;
+        transition: all .3s ease-in-out;
+
+        &::placeholder {
+          color: $N45;
+          opacity: 1;
+          font-weight: normal;
+          font-size: $size-medium;
+        }
+
+        &:hover {
+          border: 1px solid $N45;
+        }
+        &:focus {
+          box-shadow: 0 2px 2px 0 rgba(48,14,86,0.06), 0 4px 8px 0 rgba(48,14,86,0.10);
+          border: 1px solid $P75;
+        }
+      }
+
     }
 
-    input {
-      width: $input-item-width;
-      height: $input-item-height;
-      padding: 15px 15px 15px 52px;
-      border: 1px solid $N30;
-      border-radius: 24px;
-      box-shadow: none;
-      font-size: $size-medium;
-      opacity: 1;
-      color: $N500;
-      transition: all .3s ease-in-out;
-      &::placeholder {
-        color: $N45;
-        opacity: 1;
-        font-weight: normal;
-        font-size: $size-medium;
-      }
-    }
-    &:hover {
-      input {
-        box-shadow: 0 2px 2px 0 rgba(48,14,86,0.06), 0 4px 8px 0 rgba(48,14,86,0.10);
-        border: 1px solid $P75;
-        color: $N500;
-      }
-    }
   }
   .checkbox {
-    color: $N500;
-    margin-bottom: 0;
+    &::before {
+      //box-shadow: none;
+      //border-radius: 2px;
+      //background-color: $N0;
+      //border: solid 1px $N30;
+
+      //&:hover {
+      //  background-color: $N10;
+      //}
+      //&:focus {
+      //  background-color: $P75;
+      //}
+    }
   }
 }
 
