--- a/src/components/AppList/index.scss
+++ b/src/components/AppList/index.scss
@@ -11,8 +11,8 @@
   .noData{
     padding: 20px 0;
     text-align: center;
-    font-size: 16px;
-    color: $grey;
+    font-size: 12px;
+    color: $N75;
   }
 }
 .categoryApps{
