--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -105,6 +105,7 @@ $profile-hover-color: #efe6f8;
   .profiles {
     min-width: 120px;
     margin-left: -70px;
+    margin-top: 4px;
     border-radius: 2px;
     background-color: $N0;
     box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.1), 0 4px 8px 0 rgba(35, 35, 36, 0.08);
