--- a/src/components/Rectangle/index.scss
+++ b/src/components/Rectangle/index.scss
@@ -6,7 +6,7 @@
   padding: 24px;
   width: 360px;
   height: 240px;
-  background-color: #ffffff;
+  background-color: $N0;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
   &:hover {
     //transform: translate3d(0, -10px, 0);
@@ -18,27 +18,24 @@
   .title a{
     display: block;
     margin-bottom: 8px;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 1.0;
-    text-align: left;
-    color: #333333;
+    color: $N500;
     max-width: 300px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    @include textCut;
   }
   .idShow{
     margin-bottom: 17px;
     line-height: 14px;
     font-size: 12px;
-    color: $grey-word;
+    color: $N75;
   }
   .description{
     height: 85px;
     font-size: 12px;
     line-height: 17px;
-    color: $grey-word;
+    color: $N75;
     overflow: hidden;
     word-wrap: break-word;
     word-break: break-all;
