--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -15,7 +15,7 @@ $base-margin: 24px;
 $card-width: 264px;
 
 $page-bottom: 48px;
-$main-height: calc(100vh - #{$footer-height});
+$main-height: calc(100vh);
 
 // card
 $app-card-width: 264px;
