--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -31,6 +31,7 @@
       color: $N500;
       padding-left: 36px;
       border-radius: 16px;
+      border: 1px solid transparent;
       background-color: $N10;
       transition: all .3s ease-in-out;
       &::placeholder {
