--- a/src/components/UserInfo/TotalCard/index.scss
+++ b/src/components/UserInfo/TotalCard/index.scss
@@ -5,10 +5,11 @@
   padding: 20px;
   height: 120px;
   text-align: right;
-  border-radius: 3px;
-  background-color: $N0;
-  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  //border-radius: 3px;
+  //background-color: $N0;
+  //box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
   cursor: pointer;
+
   :global{
     .icon{
       float: left;
@@ -16,10 +17,6 @@
   }
   &:last-child {
     margin-right: 0;
-  }
-  &:hover {
-    //transform: translate3d(0, -5px, 0);
-    box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
   }
   .name {
     line-height: 32px;
