--- a/src/pages/AppDetail/Meta/index.scss
+++ b/src/pages/AppDetail/Meta/index.scss
@@ -3,13 +3,16 @@
 .meta{
   padding-bottom: 24px;
   border-bottom: 1px solid $N10;
-
   .icon {
     float: left;
     width: 48px;
     height: 48px;
     margin-right: 16px;
     border-radius: 2px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
   }
   .title {
     //height: 28px;
