--- a/src/pages/AppDetail/index.scss
+++ b/src/pages/AppDetail/index.scss
@@ -20,28 +20,35 @@
 
 .introCard {
   padding: 32px;
+  border-radius: 2px;
+  background-color: $N0;
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
 }
 
 .detailCard{
   margin-bottom: 24px;
-  padding: 36px;
+  padding: 32px;
+  border-radius: 2px;
+  background-color: $N0;
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
 }
 
 .versionItem{
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   .title{
-    margin-bottom: 4px;
-    line-height: 24px;
-    font-size: 14px;
+    margin-bottom: 14px;
+    font-size: 16px;
     font-weight: 500;
-    color: #300e56;
+    line-height: 1.25;
+    letter-spacing: 0;
+    color: $N500;
   }
-  .value{
-    line-height: 24px;
+  .value, .value a{
     font-size: 14px;
-    color: #7749ac;
-    width: 100%;
-    @include textCut;
+    line-height: 1.14;
+    color: $P75;
+    word-break: break-word;
+    word-wrap: break-word;
   }
 }
 
@@ -52,21 +59,22 @@
 }
 
 .versions{
-  margin-top: 36px;
+  margin-top: 32px;
   &>p{
-    margin-bottom: 6px;
-    line-height: 24px;
-    font-size: 14px;
+    margin-bottom: 12px;
+    font-size: 16px;
     font-weight: 500;
-    color: $title-color;
+    line-height: 1.25;
+    letter-spacing: 0;
+    color: $N500;
   }
   li{
     line-height: 30px;
     font-size: 14px;
-    color: #7749ac;
+    color: $P75;
     .time{
       float: right;
-      color: #4c4752;
+      color: $N300;
     }
   }
 }
