fix app detail, table selected row add className

--- a/src/pages/AppDetail/index.scss
+++ b/src/pages/AppDetail/index.scss
@@ -21,16 +21,17 @@
 .introCard {
   padding: 32px;
   border-radius: 2px;
-  background-color: $N0;
-  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  margin-bottom: 84px;
+  //background-color: $N0;
+  //box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
 }
 
 .detailCard{
   margin-bottom: 24px;
   padding: 32px;
-  border-radius: 2px;
-  background-color: $N0;
-  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  //border-radius: 2px;
+  //background-color: $N0;
+  //box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
 }
 
 .versionItem{
@@ -47,7 +48,7 @@
     font-size: 14px;
     line-height: 1.14;
     color: $P75;
-    word-break: break-word;
+    word-break: break-all;
     word-wrap: break-word;
   }
 }
