update: preview meeting issues (#194)
* fix footer, login, header, logo, home search styles
* fix header and banner search color, animation
* update card icon color
* update: remove i18n lang detect, default to english
* upgrade appImages and appDetail styles
* update app detail style
* fix query status value
* fix footer position, remove card shadow effect
* fix AppDetail show data from api
* fix app detail, table selected row add className

--- a/src/components/TdName/index.scss
+++ b/src/components/TdName/index.scss
@@ -25,8 +25,7 @@
       text-align: left;
       color: $N500;
       max-width: 120px;
-      overflow: hidden;
-      white-space: nowrap;
+      @include textCut;
       &:hover{
         color: $link-hover;
       }
@@ -56,6 +55,7 @@
   width: 100px;
   line-height: 16px;
   @include textCut;
+  color: $N300;
   :global{
     .icon {
       float: left;
