--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -90,14 +90,14 @@ $grey-time: #9b9b9b;
 $purple-name: #9d80bf;
 $purple-word: #1c062f;
 
-$background-color: #f6f6f8;
+$background-color: #F9FAFB;
 $background-color-lighter: #ffffff;
 $th-background-color: #efe9f7;
 $li-bg:#f5f7fa;
 $li-hover-bg: rgba(213, 218, 229, 0.15);
 $link-hover: #7a2ac0;
 $tr-hover-bg: rgba(213, 218, 229, 0.15);
-$body-bg: #f5f6f7;
+$body-bg: #f9fafb;
 $delete-btn: #ac4949;
 
 $body-background-color: $background-color;
