--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -28,18 +28,33 @@
       }
     }
     input {
+      color: $N500;
       padding-left: 36px;
-      border-color: transparent;
       border-radius: 16px;
+      border: 1px solid transparent;
       background-color: $N10;
       transition: all .3s ease-in-out;
       &::placeholder {
-        color: $N65;
+        font-size: 14px;
+        color: $N45;
         line-height: 1.0;
         letter-spacing: 0;
       }
       &:focus {
-        border: solid 1px $P100;
+        border: solid 1px $P75 !important;
+      }
+
+      &:hover {
+        border: solid 1px $N45;
+      }
+    }
+    :global {
+      .icon {
+        color: $N65;
+        opacity: 0.5;
+        &:hover, &:focus {
+          opacity: 1;
+        }
       }
     }
   }
