--- a/src/components/Base/Checkbox/index.scss
+++ b/src/components/Base/Checkbox/index.scss
@@ -25,7 +25,7 @@
     .icon {
       display: none;
       position: absolute;
-      left: 1px;
+      left: 0;
       top: 50%;
       font-size: $size-small;
       color: #fff;
