--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -15,11 +15,12 @@ $profile-hover-color: #efe6f8;
   }
 
   .logo {
-    width: $logo-width;
+    width: auto;
     height: $logo-height;
     display: inline-block;
     margin-top: $header-height / 2;
     transform: translateY(-50%);
+    vertical-align: middle;
   }
 
   .search {
@@ -32,20 +33,50 @@ $profile-hover-color: #efe6f8;
     vertical-align: top;
 
     input {
-      //width: 240px;
-      color: rgba(#ffffff, 0.7);
+      box-sizing: border-box;
+      width: 240px;
+      color: $P45;
       font-weight: 400;
       font-size: $size-normal;
       border-radius: 16px;
-      border: transparent;
-      background-color: rgba(#ffffff, 0.1);
-      transition: color 1s ease-in;
-      &:focus{
-        transition: color .5s ease-in;
+      border: 1px solid transparent;
+      background-color: rgba($N0, 0.1);
+      transition: color .5s ease-in;
+
+      &::placeholder {
+        font-size: 14px;
+        color: $P45;
+        line-height: 1.0;
+        letter-spacing: 0;
+      }
+
+      &:focus {
+        transition: width .2s ease-in;
         width: 360px;
         font-weight: normal;
         color: $N0;
-        border: solid 1px rgba(#ffffff, 0.5);
+        border: solid 1px rgba($N0, 0.5) !important;
+      }
+      &:hover {
+        color: $N0;
+        border: solid 1px rgba($N0, 0.3);
+      }
+    }
+
+    :global {
+      .qicon {
+        --primary-color: #fff;
+        //--secondary-color: #d3c4ed;
+      }
+      .icon {
+        color: $N0;
+        opacity: 0.5;
+        &:hover, &:focus {
+          opacity: 1;
+          svg {
+            --primary-color: #fff;
+          }
+        }
       }
     }
   }
@@ -74,7 +105,6 @@ $profile-hover-color: #efe6f8;
 .menus {
   float: right;
   line-height: $header-height;
-
   a {
     padding: 5px 10px;
     border-radius: 12px;
@@ -99,6 +129,11 @@ $profile-hover-color: #efe6f8;
   .profiles {
     min-width: 120px;
     margin-left: -70px;
+    margin-top: 4px;
+    border-radius: 2px;
+    background-color: $N0;
+    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.1), 0 4px 8px 0 rgba(35, 35, 36, 0.08);
+    border: solid 1px $N30;
     a{
       display: block;
       height: 32px;
@@ -106,6 +141,7 @@ $profile-hover-color: #efe6f8;
       width: 100%;
       line-height: 32px;
       font-size: $font14;
+      font-weight: normal;
       color: $N300;
       border-radius: 0;
       letter-spacing: 0;
@@ -118,13 +154,24 @@ $profile-hover-color: #efe6f8;
 }
 
 .toggleBtn {
+  font-size: $size-normal;
+  font-weight: 500;
   color: $N500;
   opacity: .9;
   cursor: pointer;
   line-height: 20px;
   height: 20px;
-
   .stickyHeader & {
-    color: $N0;
+    color: rgba($N0,0.9);
+  }
+  &::after{
+    position: relative;
+    top: 2px;
+    margin-left: 4px;
+  }
+  &:hover{
+    .stickyHeader & {
+      color: $N0;
+    }
   }
 }
