--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,7 +13,7 @@
   body {
     font-family: $family-primary;
     font-size: $body-size;
-    color: $text-color;
+    color: #576075;
     background-color: $body-background-color;
     -webkit-font-smoothing: antialiased;
   }
@@ -42,6 +42,7 @@
   }
 
   .main {
+    position: relative;
     width: 100%;
     min-width: $content-width;
     min-height: $main-height;
@@ -91,5 +92,11 @@
     top: 50%;
     transform: translateY(-50%) scale(0.6);
     cursor: pointer;
+  }
+
+  table {
+    .row-selected {
+      background: rgba(213, 218, 229, 0.15);
+    }
   }
 }
