update app defalut icon

--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -8,6 +8,10 @@
     width: 24px;
     height: 24px;
     border-radius: 2px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
   }
   .title{
     padding-left: 36px;
