--- a/src/components/Rectangle/AppImages/index.scss
+++ b/src/components/Rectangle/AppImages/index.scss
@@ -10,22 +10,25 @@
     img{
       display: inline-block;
       float: left;
-      margin-left: -10px;
+      margin-right: -8px;
       width: 24px;
       height: 24px;
       border-radius: 50%;
-      &:nth-child(1){
-        margin-left: 0;
+      background-color: $tr-hover-bg;
+      border: 1px solid $tr-hover-bg;
+      &:hover{
+        border-radius: 50%;
+        transform: scale(1.3);
       }
     }
     :global{
       .icon{
         float: left;
-        margin-left: -10px;
+        margin-right: -8px;
+        border-radius: 50%;
       }
       .icon:hover{
         background-color: $tr-hover-bg;
-        border-radius: 50%;
         transform: scale(1.2);
       }
 
