--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -23,6 +23,10 @@
        height: 48px;
        margin-bottom: 12px;
        border-radius: 2px;
+       img{
+         max-width: 100%;
+         max-height: 100%;
+       }
      }
      .name{
        line-height: 16px;
