--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -25,7 +25,7 @@
       a {
         @include textCut;
         display:inline-block;
-        width: 100%;
+        max-width: 100%;
         color: $N500;
         transition: color .3s ease-in;
         &:hover{
