--- a/src/components/TdName/index.scss
+++ b/src/components/TdName/index.scss
@@ -15,6 +15,10 @@
     width: 24px;
     height: 24px;
     border-radius: 2px;
+    img{
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
   .info{
     display: inline-block;
@@ -65,6 +69,9 @@
 }
 :global {
   .smallId {
+    [class*='name'] {
+      max-width: 100px !important;
+    }
     [class*='description'] {
       width: 75px !important;
     }
