--- a/src/pages/AppDetail/Meta/index.scss
+++ b/src/pages/AppDetail/Meta/index.scss
@@ -10,8 +10,8 @@
     margin-right: 16px;
     border-radius: 2px;
     img{
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
 
