--- a/src/pages/Admin/Apps/Deploy/index.scss
+++ b/src/pages/Admin/Apps/Deploy/index.scss
@@ -54,7 +54,7 @@
     display: inline-block;
     font-weight: bold;
   }
-  .select{
+  .select, .input{
     width: 256px;
     margin-right: 12px;
   }
